--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <% out.println("Hola Segismundo, hoy es 7/11/2019");%>
+       Hola Segismundo, hoy es 8/11/2019
     </body>
 </html>
